css/style.css
/* ... */
@media (min-width: 106.24875em) {
  .services::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background: transparent url("../img/services/decor.svg") top right/auto no-repeat;
    opacity: 0.3;
  }
}

@media (min-width: 120em) {
  .contacts__btn {
    left: -6.25rem;
  }
}

@media (max-width: 20em) {
  .input {
    font-size: 0.8125rem;
  }

  .input::-webkit-input-placeholder {
    font-size: 0.8125rem;
  }

  .input::-moz-placeholder {
    font-size: 0.8125rem;
  }

  .input:-ms-input-placeholder {
    font-size: 0.8125rem;
  }

  .input::-ms-input-placeholder {
    font-size: 0.8125rem;
  }

  .input::placeholder {
    font-size: 0.8125rem;
  }

  .sitemap__label:not(:last-child) {
    margin-bottom: 0.625rem;
  }

  .sitemap__item {
    font-size: 0.875rem;
  }

  .socials {
    -webkit-column-gap: 1.5625rem;
       -moz-column-gap: 1.5625rem;
            column-gap: 1.5625rem;
  }

  .box-content {
    gap: 0.8125rem;
  }

  .box-content__title {
    font-size: 2.125rem;
  }

  .header__container {
    min-height: 4.8125rem;
  }

  .header__logo {
    max-width: 5rem;
  }

  .footer__container {
    padding-bottom: 1.25rem;
  }

  .footer__container {
    padding-top: 1.25rem;
  }

  .footer__logo img {
    width: 6.25rem;
  }

  .footer__subscribe {
    gap: 0.9375rem;
  }

  .footer__title {
    font-size: 1.375rem;
  }

  .footer__license {
    font-size: 0.75rem;
  }

  .footer__license {
    padding-top: 0.625rem;
  }

  .footer__license {
    padding-bottom: 0.625rem;
  }

  .form__error {
    font-size: 0.75rem;
  }

  .hero {
    padding-top: 4.8125rem;
  }

  .hero__title {
    font-size: 2.8125rem;
  }

  .hero .swiper-controll {
    padding-top: 0.9375rem;
  }

  .hero .swiper-controll {
    padding-bottom: 0.9375rem;
  }

  .about__container {
    padding-top: 1.875rem;
  }

  .about__container {
    padding-bottom: 1.875rem;
  }

  .about__container {
    row-gap: 1.25rem;
  }

  .about__inner {
    gap: 1.25rem;
  }

  .about__items {
    gap: 0.625rem;
  }

  .about__item-title {
    font-size: 1.25rem;
  }

  .products {
    padding-top: 1.875rem;
  }

  .products {
    padding-bottom: 1.875rem;
  }

  .products__content-box:not(:last-child) {
    margin-bottom: 1.25rem;
  }

  .products__items:not(:last-child) {
    margin-bottom: 1.875rem;
  }

  .items-products {
    gap: 1.875rem;
  }

  .products-item__img:not(:last-child) {
    margin-bottom: 0.75rem;
  }

  .products-item__img img {
    padding: 1.25rem;
  }

  .services {
    padding-top: 1.875rem;
  }

  .services {
    padding-bottom: 1.875rem;
  }

  .services__container {
    gap: 1.25rem;
  }

  .conditions {
    padding-top: 1.875rem;
  }

  .conditions {
    padding-bottom: 1.25rem;
  }

  .conditions__items {
    row-gap: 1.875rem;
  }

  .conditions__img-link:not(:last-child) {
    margin-bottom: 0.625rem;
  }

  .conditions__title {
    font-size: 1.625rem;
  }

  .contacts {
    padding-top: 0.9375rem;
  }

  .contacts {
    padding-bottom: 0.9375rem;
  }

  .contacts .box-content__contact {
    font-size: 1rem;
  }

  .contacts__img-wrap {
    padding: 0.9375rem;
  }

  .contacts__btn {
    top: -3.75rem;
  }

  .contacts__btn {
    width: 6.25rem;
  }

  .contacts__btn img {
    -ms-flex-preferred-size: 1.875rem;
        flex-basis: 1.875rem;
  }

  .contacts__btn img {
    width: 1.875rem;
  }

  .opinion {
    padding-top: 1.875rem;
  }

  .opinion {
    padding-bottom: 1.875rem;
  }

  .opinion__slide {
    gap: 1.25rem;
  }

  .opinion__slide blockquote {
    gap: 1.25rem;
  }

  .opinion__slide blockquote {
    font-size: 1.125rem;
  }

  .opinion__slide blockquote cite {
    font-size: 1.875rem;
  }
}

@media (max-width: 109.87375em) {
  .footer::before {
    opacity: 0.1;
  }
}

@media (max-width: 98.25em) {
  .contacts__btn {
    left: -0.6875rem;
  }
}

@media (max-width: 61.99875em) {
  .sitemap {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-align: end;
        -ms-flex-align: end;
            align-items: flex-end;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
  }

  .footer__container > * {
    position: static;
  }

  .footer__container {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
    -ms-grid-rows: (auto)[3];
    grid-template-rows: repeat(3, auto);
  }

  .footer__logo {
    border-top: 0.0625rem solid var(--bg-secondary);
    border-bottom: 0.0625rem solid var(--bg-secondary);
    border-left: 0;
    border-right: 0;
    padding: 1.25rem;
  }

  .footer__subscribe {
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }

  .footer__title {
    max-width: 100%;
    text-align: center;
  }

  .footer__form {
    max-width: 80%;
  }

  .footer__license {
    position: static;
  }

  .items-products {
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  }

  .services__content-box {
    max-width: 100%;
    margin: 0;
  }
}
/* ... */

